--- a/main.ipynb
+++ b/main.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "OneClick_Colab_RDP_Server.ipynb",
+      "name": "Shiro_RDP.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
@@ -52,7 +52,7 @@
         "\n",
         "import os\n",
         "\n",
-        "username = \"woltrex\" #@param {type:\"string\"}\n",
+        "username = \"shiro\" #@param {type:\"string\"}\n",
         "password = \"root\" #@param {type:\"string\"}\n",
         "\n",
         "# Creation of user\n",
