--- a/main.ipynb
+++ b/main.ipynb
@@ -67,7 +67,7 @@
         "# Change default shell from sh to bash\n",
         "os.system(\"sed -i 's/\\/bin\\/sh/\\/bin\\/bash/g' /etc/passwd\")\n",
         "\n",
-        "print(\"User Created✅.\")\n",
+        "print(\"User Created.\")\n",
         "#@markdown  It takes 4-5 minutes for installation\n",
         "\n",
         "import os\n",
@@ -123,7 +123,7 @@
         "        command = f\"{CRP} --pin={Pin}\"\n",
         "        os.system(f\"su - {username} -c '{command}'\")\n",
         "        os.system(\"service chrome-remote-desktop start\")\n",
-        "        print(\"Remort desktop server Created✅.\")\n",
+        "        print(\"Remote Desktop Server Created.\")\n",
         "\n",
         "\n",
         "try:\n",
@@ -135,7 +135,7 @@
         "        else:\n",
         "            CRD()\n",
         "except NameError as e:\n",
-        "    print(\"username variable not found\")\n",
+        "    print(\"Username variable not found\")\n",
         "    print(\"Create a User First\")"
       ],
       "execution_count": null,
